<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <ImageView android:src="@drawable/whatlogo" android:id="@+id/imageView1" android:layout_width="fill_parent" android:layout_height="wrap_content"></ImageView>
    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView1" android:text="@string/username" android:layout_gravity="center"></TextView>
    <EditText android:inputType="textPersonName" android:id="@+id/editText1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <requestFocus></requestFocus>
    </EditText>
    <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView2" android:text="@string/password"></TextView>
    </TableRow>
    <EditText android:id="@+id/editText2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textPassword"></EditText>
    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content"></RelativeLayout>
    <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content"></TableRow>
    <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content"></TableRow>
    <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content"></TableRow>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/button1" android:text="@string/login"></Button>
</TableLayout>
