<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/TableLayout1"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:gravity="clip_horizontal"
android:baselineAligned="false"
android:orientation="vertical"
android:background="#FF343434">

    <View
    android:layout_height="25dip"
    android:layout_width="fill_parent"
    android:background="#FF151515"/>

    <ImageView
    android:id="@+id/imageView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/logo"
    android:layout_gravity="center_horizontal"/>

    <TextView
    android:id="@+id/welcomeText"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:gravity="center_horizontal"
    android:text="@string/welcome"
    android:layout_marginRight="10dip"
    android:layout_marginLeft="10dip"/>

    <View
    android:layout_height="0dip"
    android:layout_width="fill_parent"
    android:layout_weight="1"/>

    <EditText
    android:id="@+id/username"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textPersonName"
    android:hint="Username"
    android:layout_marginTop="5dip"
    android:layout_marginBottom="5dip"
    android:layout_marginRight="20dip"
    android:layout_marginLeft="20dip">
        <requestFocus></requestFocus>
    </EditText>

    <EditText
    android:id="@+id/password"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:hint="Password"
    android:layout_marginTop="5dip"
    android:layout_marginBottom="5dip"
    android:layout_marginRight="20dip"
    android:layout_marginLeft="20dip"/>

    <View
    android:layout_height="0dip"
    android:layout_width="fill_parent"
    android:layout_weight="1"/>

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/rememberme"
        android:layout_marginLeft="15dip"/>

        <View
        android:layout_height="0dip"
        android:layout_width="fill_parent"
        android:layout_weight="1"/>

        <Button
        android:id="@+id/login"
        android:layout_width="130dip"
        android:text="@string/login"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="15dip"/>

    </LinearLayout>

    <View
    android:layout_height="0dip"
    android:layout_width="fill_parent"
    android:layout_weight="1"/>

    <View
    android:layout_height="25dip"
    android:layout_width="fill_parent"
    android:background="#FF151515"/>

</LinearLayout>
